<resources>
    <string name="app_name">SESB EHQ</string>
    <string name="application">FieldTekPro</string>
    <string name="ip_address">http://dc2vdfehd083.sesb.com.my/</string>
    <string name="ip_address_port">dc2vdfehd083.sesb.com.my</string>
    <string name="webservice_type">rest</string>
    <string name="login_url">sap/bc/zemt_pm_rest/Authenticate?sap-client=100Location?sap-client=100</string>
    <string name="syncmap_url">sap/bc/zemt_pm_rest/SyncMapGetData?sap-client</string>
    <string name="ip_address_port_attach">http://dc2vdfehd083.sesb.com.my%1s</string>
    <string name="database_name">FIELDTEKPRO_SESB_DEV.db</string>
    <string name="orders">Orders</string>
    <string name="home_button">Home Button</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="equip">Equipment</string>
    <string name="priority_star">Priority</string>
    <string name="work_center">Work Center</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="file_not_supported">File is not Supported</string>
    <string name="network_connection_dialog_text">No Network Available. Please Check your Internet Connection</string>
    <string name="signing_in">Signing In...</string>
    <string name="connect">Connect</string>
    <string name="fetching_data">Initial data load in progress. Please wait&#8230;</string>
    <string name="refreshing_data">Refresh in progress. Please wait&#8230;</string>
    <string name="no_bom_found">No BOM Found</string>
    <string name="loading_history">Loading History...</string>
    <string name="maintenanceplan">Maintenance Plan</string>
    <string name="maintaince_plan">Maint. Plan</string>
    <string name="maintaince_plan_text">Maint. Plan Text</string>
    <string name="maintaince_item">Maint. Item</string>
    <string name="maintaince_strategy">Maint. strategy</string>
    <string name="maintaince_plan_type">Maint. Type</string>
    <string name="loading_maintenanceplan">Loading Maintenance Plan...</string>
    <string name="loading_insp_checklist">Loading Measurement Readings...</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="scan">Scan</string>
    <string name="no_notifications_found">No Notifications Found.</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="utilities">Utilities</string>
    <string name="create_notification">Create Notification</string>
    <string name="fetching_notifications">Fetching Notifications...</string>
    <string name="fetching_orders">Fetching Orders...</string>
    <string name="rel">REL</string>
    <string name="nopo">NOPO</string>
    <string name="teco">NOCO</string>
    <string name="id">ID</string>
    <string name="text">Text</string>
    <string name="colon">:</string>
    <string name="no_data_found">No Data Found</string>
    <string name="loading_movement_types">Loading Movement Types...</string>
    <string name="loading_costcenter_types">Loading Cost Center Types...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh_bom">Refreshing Equipment BOM...</string>
    <string name="refresh_stock">Refreshing Stock Data...</string>
    <string name="refresh_text">All Relavent Data will be loaded from server. Do you want to continue?</string>
    <string name="loading_bom">Loading Equipment BOM...</string>
    <string name="loading">Loading...</string>
    <string name="bom_no">BOM #</string>
    <string name="plant">Plant</string>
    <string name="sort_by">Sort By:</string>
    <string name="clear_all">Clear All</string>
    <string name="sort_text1">Sort A to Z</string>
    <string name="sort_text2">Sort Z to A</string>
    <string name="sort_text3">Critical to Low</string>
    <string name="sort_text4">Low to Critical</string>
    <string name="sort_text5">Ascending 1 - 9</string>
    <string name="sort_text6">Descending 9 - 1</string>
    <string name="components">Component</string>
    <string name="components_text">Comp. Text</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_star">*  Quantity</string>
    <string name="unit">Unit</string>
    <string name="requirement_date">*  Requirement Date</string>
    <string name="movement_type">Movement Type</string>
    <string name="movement_type_star">*  Movement Type</string>
    <string name="cost_center">Cost Center</string>
    <string name="cost_center_star">*  Cost Center</string>
    <string name="header">Header</string>
    <string name="causecode">Cause Code</string>
    <string name="activity">Activity</string>
    <string name="task">Task</string>
    <string name="attachments">Attachments</string>
    <string name="map">Map</string>
    <string name="refreshing_notifications">Refreshing Notifications...</string>
    <string name="notif_release_inprogress">Notification Release in progress...</string>
    <string name="notif_postpone_inprogress">Notification Postpone in progress...</string>
    <string name="notif_complete_inprogress">Notification Complete in progress...</string>
    <string name="create_notif_inprogress">Create Notification in progress...</string>
    <string name="create_jsa_inprogress">Creating JSA in progress...</string>
    <string name="change_notif_inprogress">Change Notification in progress...</string>
    <string name="duplicate_notifications">Duplicate Notifications</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="user_log">User Log</string>
    <string name="equip_history1">Equip.History</string>
    <string name="no_history_found">No History Found</string>
    <string name="defects">Defects</string>
    <string name="notification_type">Notification Type</string>
    <string name="notif_type">Notif Type</string>
    <string name="notification_type_star">Notification Type</string>
    <string name="notification_text_star">Notification Short Text</string>
    <string name="notification_text">Notification Text</string>
    <string name="reported_by">Reported By</string>
    <string name="planning_plant">Planning Plant</string>
    <string name="maintenance_plant">Maintenance Plant</string>
    <string name="responsible">Responsible</string>
    <string name="user_responsible"> Primary User Responsible</string>
    <string name="equipment_inspection">Measurement Readings</string>
    <string name="calibration">Calibration</string>
    <string name="object_id">Object ID</string>
    <string name="msg">Message</string>
    <string name="downloading_pleasewait">Downloading JSA PDF. Please wait...</string>
    <string name="doc_type">Doc. Type</string>
    <string name="wcd_templates">Isolation Templates</string>
    <string name="loading_floc">Loading Function Location...</string>
    <string name="loading_equip">Loading Equipments...</string>
    <string name="loading_notif_types">Loading Notification Types...</string>
    <string name="planner_group">Planner Group</string>
    <string name="req_stdate_star">Required Start Date &amp; Time</string>
    <string name="req_enddate">Required End Date &amp; Time</string>
    <string name="mal_func_stdate_star">Malfunction Start Date &amp; Time</string>
    <string name="mal_func_enddate">Malfunction End Date &amp; Time</string>
    <string name="effect">Effect</string>
    <string name="no_causecode_add">No Cause Codes Found. Please add Cause Code.</string>
    <string name="no_activity_add">No Activities Found. Please add Activity.</string>
    <string name="no_task_add">No Tasks Found. Please add Task.</string>
    <string name="add_text">Add</string>
    <string name="remove_text">Remove</string>
    <string name="obj_part">Object Part</string>
    <string name="obj_part1">Object Part</string>
    <string name="defect_desc">Defect Description</string>
    <string name="no_of_defects">No. of Defects</string>
    <string name="defect_code">Defect Code</string>
    <string name="defect_code_star">Defect Code</string>
    <string name="defect_grp">Defect Group</string>
    <string name="defect_grp_star">Defect Group</string>
    <string name="obj_part_code">Object Part Code</string>
    <string name="obj_part_code1">Object Part Code</string>
    <string name="event">Damage</string>
    <string name="event1">Damage</string>
    <string name="event_code">Damage Code</string>
    <string name="event_code1">Damage Code</string>
    <string name="event_des">Damage Description</string>
    <string name="cause">Cause</string>
    <string name="cause1">Cause</string>
    <string name="cause_code">Cause Code</string>
    <string name="cause_code1">Cause Code</string>
    <string name="cause_des">Cause Descrption</string>
    <string name="code">Code</string>
    <string name="code_star">*  Code</string>
    <string name="item_key_star">*  Item Key</string>
    <string name="item_key">Item Key</string>
    <string name="code_group_star">*  Code Group</string>
    <string name="code_group">Code Group</string>
    <string name="phase">Phase</string>
    <string name="created_by">Created By</string>
    <string name="start_date">Start Date &amp; Time</string>
    <string name="custom_info">Custom Info</string>
    <string name="planned_start_date">* Planned Start Date &amp; Time</string>
    <string name="planned_start_date1">Planned Start Date</string>
    <string name="main_item_type">Maint. Item Type</string>
    <string name="request_date">Request Date</string>
    <string name="task_list_type">Task List Type</string>
    <string name="task_list_group">Task List Group</string>
    <string name="task_list_text">Task List Text</string>
    <string name="end_date">End Date &amp; Time</string>
    <string name="finish_date">Finish Date &amp; Time</string>
    <string name="planned_end_date">* Planned End Date &amp; Time</string>
    <string name="completion_datetime">Completion Date &amp; Time</string>
    <string name="activity_code_group">Activity Code Group</string>
    <string name="planner">Planner</string>
    <string name="activity_key">Activity Key</string>
    <string name="activity_text">Activity Text</string>
    <string name="equi_id">Equipment</string>
    <string name="equi_txt">Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="file">File</string>
    <string name="strg_bin">Storage Bin</string>
    <string name="no_attachments">No Files Attached</string>
    <string name="high">High</string>
    <string name="enter_description">Please Enter Description</string>
    <string name="fetching_notifcation">Fetching Notification Data</string>
    <string name="employee_id">Enter your SAP ID</string>
    <string name="sap_password">Enter SAP system Password</string>
    <string name="application_ver">Application Version</string>
    <string name="initial_load">Initial Data Load</string>
    <string name="push_interval">Push Interval (Mins)</string>
    <string name="reset">Reset</string>
    <string name="reset_settings">Are you sure you want to reset your settings? This will discard all information you have entered so far.</string>
    <string name="no_network">No Network Available</string>
    <string name="connect_internet">Please Check your Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="app_version_data">FieldTekPro 1.2</string>
    <string name="task_group">Task Group</string>
    <string name="ordr_sort_info">Info : Select only one option</string>
    <string name="ordr_number">Order Number</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
</resources>