<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/light_grey1">

    <LinearLayout android:padding="10dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:id="@+id/camera_textview" android:padding="10dp" android:gravity="center" android:drawablePadding="10dp" android:textColor="@color/black" android:textSize="16sp" android:text="@string/camera" android:drawableLeft="@drawable/ic_camera_icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></com.enstrapp.fieldtekpro.customfont.Font_TextView>
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:id="@+id/gallery_textview" android:padding="10dp" android:gravity="center" android:drawablePadding="10dp" android:text="@string/gallery" android:textColor="@color/black" android:textSize="16sp" android:drawableLeft="@drawable/ic_gallery_icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></com.enstrapp.fieldtekpro.customfont.Font_TextView>
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:id="@+id/file_textview" android:padding="10dp" android:gravity="center" android:drawablePadding="10dp" android:text="@string/file" android:textColor="@color/black" android:textSize="16sp" android:drawableLeft="@drawable/ic_file_icon" android:layout_width="wrap_content" android:layout_height="wrap_content"></com.enstrapp.fieldtekpro.customfont.Font_TextView>
    </LinearLayout>

</LinearLayout>