<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <com.enstrapp.fieldtekpro.customfont.Font_TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:id="@+id/equip_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@color/white"/>

        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:id="@+id/notif_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@color/white"/>

        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>
