<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/internet_connection_unavailable_gif"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    
    <com.enstrapp.fieldtekpro.customfont.Font_TextView
	        android:id="@+id/description_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/black"
	        android:textSize="15sp"
	        android:padding="10dp"
	        android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
	        android:gravity="center"
	        android:text="@string/network_connection_dialog_text" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<com.enstrapp.fieldtekpro.customfont.Font_Button
			android:textColor="@color/colorPrimary"
			android:textSize="15sp"
			android:layout_gravity="center"
			android:id="@+id/connect_button"
			android:text="@string/connect"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:padding="10dp"
			android:layout_height="wrap_content"
			android:theme="@style/Button1.Style"/>
		<com.enstrapp.fieldtekpro.customfont.Font_Button
			android:textColor="@color/colorPrimary"
			android:textSize="15sp"
			android:layout_gravity="center"
			android:id="@+id/cancel_button"
			android:text="@string/cancel"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:padding="10dp"
			android:layout_height="wrap_content"
			android:theme="@style/Button1.Style"/>
	</LinearLayout>

</LinearLayout>
