<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <com.enstrapp.fieldtekpro.customfont.Font_TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:theme="@style/MyDatePicker" />

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:orientation="horizontal">

        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>