<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    android:layout_margin="15dp">

    <!-- start of navigation bar -->
    <RelativeLayout
        android:layout_width="fill_parent" android:layout_height="49dp"
        android:background="@color/colorPrimary" android:orientation="horizontal" >
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:layout_width="fill_parent" android:id="@+id/title_textview"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" android:padding="5dp"
            android:text="@string/duplicate_notifications" android:textColor="@color/white" android:gravity="center"
            android:textSize="15sp"/>
    </RelativeLayout>
    <!-- end of navigation bar -->

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" android:padding="10dp" android:layout_gravity="center" android:gravity="center">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"/>
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:layout_width="fill_parent" android:id="@+id/no_data_textview"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" android:padding="5dp" android:gravity="center"
            android:text="@string/no_data_found" android:textColor="@color/red"
            android:textSize="16sp" android:visibility="gone" android:drawableTop="@drawable/ic_no_data_icon"/>
    </LinearLayout>

    <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:background="@color/dark_grey2">
        <com.enstrapp.fieldtekpro.customfont.Font_TextView
            android:layout_width="fill_parent" android:id="@+id/text_msg"
            android:layout_height="fill_parent" android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" android:padding="5dp" android:gravity="center"
            android:text="Would you like to create Notification?" android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout android:layout_height="49dp" android:layout_width="match_parent" android:background="@color/colorPrimary">
        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:textColor="@color/white" android:textSize="16sp" android:id="@+id/no_button" android:background="@color/colorPrimary" android:text="@string/no" android:layout_width="0dp" android:layout_weight="1" android:layout_height="49dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
        <Button android:background="@color/white" android:layout_width="1dp" android:layout_height="30dp" android:layout_gravity="center"/>
        <com.enstrapp.fieldtekpro.customfont.Font_Button
            android:textColor="@color/white" android:textSize="16sp" android:id="@+id/yes_button" android:background="@color/colorPrimary" android:text="@string/yes" android:layout_width="0dp" android:layout_weight="1" android:layout_height="49dp"></com.enstrapp.fieldtekpro.customfont.Font_Button>
    </LinearLayout>

</LinearLayout>